--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="styleinicio.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Calculadora de Descuentos y Tasa de Cambio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- <h2>Iniciar Sesión</h2>
-    <form id="loginForm">
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" required><br><br>
+  <div class="container">
+    <h1>Calculadora de Descuentos y Tasa de Cambio</h1>
 
-        <label for="contrasena">Contraseña:</label>
-        <input type="password" id="contrasena" required><br><br>
+    <!-- Formulario de entrada -->
+    <form id="calcForm">
+      <label for="price">Precio (moneda local):</label>
+      <input type="number" id="price" placeholder="Ej: 1000" step="0.01" min="0" required />
 
-        <button type="submit">Entrar</button>
+      <label for="exchangeRate">Tasa de Cambio (local a USD):</label>
+      <input type="number" id="exchangeRate" placeholder="Ej: 0.00027" step="0.00001" min="0" required />
+
+      <label for="discount">Descuento (%):</label>
+      <input type="number" id="discount" placeholder="Ej: 15" step="0.01" min="0" max="100" required />
+
+      <button type="submit">Calcular</button>
     </form>
- -->
- <div class="login-container">
-    <form class="login-form" id="loginForm">
-        <h2>Iniciar Sesión</h2>
-        <div class="input-group">
-            <label for="usuario">Usuario</label>
-            <input type="text" id="usuario" name="usuario" required>
-        </div>
-        <div class="input-group">
-            <label for="clave">Contraseña</label>
-            <input type="password" id="clave" name="clave" required>
-        </div>
-        <button type="submit" class="btn-login">
-            <i class="fas fa-sign-in-alt"></i> Entrar
-        </button>
-    </form>
-</div>
 
-    <script>
-        document.getElementById("loginForm").addEventListener("submit", function (e) {
-            e.preventDefault();
-            const usuario = document.getElementById("usuario").value;
-            const contrasena = document.getElementById("clave").value;
+    <!-- Resultado -->
+    <div id="result" class="result"></div>
 
-            // Usuarios de ejemplo
-            if (usuario === "admin" && contrasena === "1234") {
-                localStorage.setItem("logueado", "true");
-                window.location.href = "indexx.html";
-            } else {
-                alert("Usuario o contraseña incorrectos");
-            }
-        });
-    </script>
+    <!-- Tabla con historial -->
+    <table id="historyTable">
+      <thead>
+        <tr>
+          <th>Precio Local</th>
+          <th>Tasa de Cambio</th>
+          <th>Descuento (%)</th>
+          <th>Precio Final Local</th>
+          <th>Precio Final USD</th>
+          <th>Fecha y Hora</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Aquí se agrega el historial dinámicamente -->
+      </tbody>
+    </table>
+
+    <button id="clearHistory">Borrar Historial</button>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
